k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searanch-docs
  labels:
    app: searanch-docs
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: searanch-docs
